attempted form tags and forced submission upon timer end

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <title>Document</title>
 </head>
 <body>
-  <div id='test'>
-    <h2 id='timer'></h2>
-  </div>
+  <div id='timer'></div>
+  <div id="test"></div>
+    <form id='questionForm'>
+      
+    </form>
   
   <script
   src="https://code.jquery.com/jquery-3.3.1.js"
