--- a/index.html
+++ b/index.html
@@ -5,20 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.12/css/uikit.min.css" />
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Document</title>
+  <title>GD Trivia</title>
 </head>
 <body>
-  <div id='timer'></div>
-  <div id="test"></div>
-    <form id='questionForm'>
-      
-    </form>
-  
+  <div class="uk-container">
+      <h1 class="uk-heading-line uk-text-center"><span>Grateful Dead Trivia</span></h1>
+
+    <div id='timer' class="uk-text-center"></div>
+
+    <div id="startButton">
+      <button class="uk-button uk-button-primary">Start Quiz</button>
+    </div>
+
+    <div id="test"></div>
+
+    <form id='questionForm'></form></div>
+
+    <div id="correct"></div>
+
+  </div>
+
   <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-  <script src='assets/javascript/app.js'></script>
+  <script src='./assets/javascript/app.js'></script>
 </body>
 </html>
